# becwright

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.es.md  README.md  SECURITY.md  action.yml  pyproject.toml
.bec/: rules.yaml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bec_proposal.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: becwright.yml  build-binaries.yml  ci.yml  publish.yml  release.yml
becs/: README.md  no-console-log-js.bec.yaml  no-dangerous-eval.bec.yaml  no-debug-go.bec.yaml  no-debug-remnants.bec.yaml  no-debugger-js.bec.yaml  no-hardcoded-secrets.bec.yaml  no-token-in-logs.bec.yaml  no-wildcard-imports.bec.yaml
docs/: concepto-bec.md  decisiones.md  estado-y-roadmap.md
documentation/: README.es.md  README.md  architecture.es.md  architecture.md  mcp.es.md  mcp.md  portability.es.md  portability.md  recipes.es.md  recipes.md  releasing.es.md  releasing.md  stability.es.md  stability.md  usage.es.md  usage.md  writing-checks.es.md  writing-checks.md
integrations/claude-code/: README.md
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/commands/: becwright.md
integrations/claude-code/skills/becwright/: SKILL.md
npm/: set-version.mjs  stage.mjs
npm/becwright/: README.md  package.json
packaging/: becwright.spec  becwright_entry.py
prototype/: README.md
prototype/.bec/: becwright.py  rules.yaml
prototype/.bec/checks/: no_token_in_logs.py
prototype/src/: auth.py
schema/: rules.schema.json
src/becwright/: bundle.py  catalog.py  cli.py  engine.py  git.py  mcp_server.py  report.py  rules.py
src/becwright/becs/: README.md  no-console-log-js.bec.yaml  no-dangerous-eval.bec.yaml  no-debug-rust.bec.yaml  no-debugger-js.bec.yaml  no-hardcoded-secrets.bec.yaml  no-set-x-left-in.bec.yaml  no-token-in-logs.bec.yaml  no-wildcard-imports.bec.yaml
src/becwright/checks/: _ignore.py  conflict_markers.py  dangerous_eval.py  debug_remnants.py  filename.py  forbid.py  hardcoded_secrets.py  max_lines.py  no_token_in_logs.py  redundant_comments.py  require.py  wildcard_imports.py
tests/: test_binary_inputs.py  test_bundle.py  test_catalog.py  test_checks.py  test_cli_and_git.py  test_doctor_validate.py  test_engine.py  test_engine_integration.py  test_forbid.py  test_hook_managers.py  test_ignore.py  test_init.py  test_list.py  test_mcp.py  test_metric_naming_checks.py  test_more_checks.py  test_redundant_comments.py  test_report_and_json.py  test_rules.py  test_schema.py  test_special_path.py  test_staged_content.py
