# Packaging for becwright. Target Python 3.12 (current environment has 3.14).
# Minimal dependencies on purpose: only pyyaml (project convention).
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "becwright"
version = "0.3.0"
description = "Deterministic, portable constraints (BECs) that block commits violating your rules — a safety net for AI-written and human-written code."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alonso David De Leon Rodarte" }]
license = { text = "MIT" }
keywords = [
    "git-hooks",
    "pre-commit",
    "lint",
    "linter",
    "code-quality",
    "code-review",
    "static-analysis",
    "constraints",
    "ai-agents",
    "claude-code",
    "developer-tools",
    "bec",
]
dependencies = ["pyyaml>=6"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Quality Assurance",
]

# The global command. `pipx install .` makes `becwright` available on PATH.
[project.scripts]
becwright = "becwright.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "mcp>=1.2"]
# Used to freeze the standalone binary distributed via npm (see packaging/).
build = ["pyinstaller>=6"]
# MCP server for AI agents: `becwright mcp` (see src/becwright/mcp_server.py).
mcp = ["mcp>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

# Ship the BEC catalog inside the wheel so `becwright add` works offline.
[tool.setuptools.package-data]
becwright = ["becs/*.bec.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
